[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/alien-ship.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/common/SwipeDetection.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="alien-ship" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="Particles" type="CPUParticles2D" parent="alien-ship"]
show_behind_parent = true
position = Vector2( -0.250656, -11.2234 )
amount = 500
randomness = 0.1
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 5.405, 1 )
direction = Vector2( 0, -1 )
spread = 9.68
gravity = Vector2( 0, -98 )
initial_velocity = 302.45
initial_velocity_random = 0.36
radial_accel = 8.6
damping = 23.66
angle = -294.2
angle_random = 0.26
scale_amount_random = 0.17
color = Color( 0.800781, 0.115738, 0.115738, 1 )
hue_variation = -0.19
hue_variation_random = 0.77
anim_speed = 48.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.0883865, -2.20971 )
shape = SubResource( 1 )

[node name="BulletStart" type="Node2D" parent="."]
position = Vector2( 0, 16.4402 )

[node name="SwipeDetection" parent="." instance=ExtResource( 3 )]
[connection signal="swiped" from="SwipeDetection" to="." method="_on_SwipeDetection_swiped"]
[connection signal="swiped_canceled" from="SwipeDetection" to="." method="_on_SwipeDetection_swiped_canceled"]
